--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="loader"></div>
-<section class="section">
+<div class="section">
     <div class="layer-close"></div>
 <aside class="dashboard">
     <div class="mobile-button"><span></span></div>
@@ -209,7 +209,7 @@
             </div>
         </div>
     </main>
-</section>
+</div>
 
 <script src="js/jquery-3.6.1.min.js"></script>
 <script src="js/main.js"></script>
